a have fixed menu overlap

--- a/src/styles/utils/_page.scss
+++ b/src/styles/utils/_page.scss
@@ -24,6 +24,7 @@
 
     &:target {
       transform: translateX(0);
+      z-index: 1;
     }
   }
 
